# visvib-manual

./: .gitignore  .mise.toml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs-deploy.yml
3dmodels/: piezo_cover_large.stl  piezo_cover_small.stl  shadow-cover_small.stl
Development/: index.html
Preparation/Hardware/: index.html
Preparation/Hardware/make-contact-microphone/: index.html
Preparation/Software/: index.html
Setup/: index.html
Troubleshooting/: index.html
Usage/: index.html
css/: iframe.css
docs/: 1-1-make-contact-microphone.md  1-prep-hardware.md  2-prep-software.md  3-setup.md  4-use.md  5-troubleshooting.md  DEVELOPMENT.md  README.en.md  README.md
docs/3dmodels/: cableclip_large.stl  cableclip_small.stl  shadow-clip_large.stl  shadow-clip_small.stl  shadow-cover_large.stl
docs/Preparation/Hardware/: index.en.md  index.md  make-contact-microphone.en.md  make-contact-microphone.md
docs/Preparation/Software/: index.en.md  index.md
docs/Setup/: index.en.md  index.md
docs/Troubleshooting/: index.en.md  index.md
docs/Usage/: index.en.md  index.md
docs/en/: 1-1-make-contact-microphone.md  1-prep-hardware.md  2-prep-software.md  3-setup.md  4-use.md  5-troubleshooting.md  README.md
en/: index.html
en/Development/: index.html
en/Preparation/Hardware/: index.html
en/Preparation/Hardware/make-contact-microphone/: index.html
en/Preparation/Software/: index.html
en/Setup/: index.html
en/Troubleshooting/: index.html
en/Usage/: index.html
search/: search_index.json
